# bounded-adversarial-production

./: .gitignore  CLAUDE-CODE-CHEAT-SHEET.md  CLAUDE.md  CODEBASE_INDEX.md  README.md  init_and_run_two_projs.sh  pyproject.toml  run-both.sh  run-coding.sh
.baps-workspace-coverage/: baps-config.json  run-result.json
.baps-workspace-dry-audit/: baps-config.json  run-result.json
.baps-workspace-security/: baps-config.json  run-result.json
blackboard/: events.jsonl
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT_2026_05_28.md  AUDIT-DRY.md  CODE-QUALITY-AUDIT.md  DOCUMENT-PROJECT-SETUP.md  DUMP-WITH-TODOS-NEAR-FUTURE.md  FAKE-CURRENT-STATE.md  FAKE-GOALS.md  FLOWCHART-TMP.md  HARDENING-LOOP-PLAN.md  INTEGRATION-ONTOLOGY.md  NORTH-STAR-NOTE.md  NORTH-STAR.md  ONTOLOGY-MAPPING.md  OPTIMIZATION-ANALOGY.md  PROMPT-INJECTION-NOTE.md  RENAME-PLAN.md  REVIEW_2026_05_28.md  ROADMAP-V2.md  ROADMAP.md  STATE-HANDLING-AUDIT.md  STATE_MODEL.md  SYSTEM.md  TODO-note.md  TODO-v1.md  TODO-v2.md  TODO-v3.md  TODO.md  arch-prompt.md  doc-prompt.md  system-prompt.md
examples/: audit-baps.yaml  audit-coverage.yaml  audit-dry.yaml  coding-project-rust.yaml  coding-project-zig.yaml  coding-project.yaml  document-project.yaml  python-project-task-manager.yaml  rust-project-csv-parser.yaml  rust-project.yaml
scripts/: extract_prompts.py  index_codebase.py  rg_entities.py  show_prompts.py
state/: demo-state.json
tests/: conftest.py  test_adversarial_demo.py  test_artifacts.py  test_audit_adapter.py  test_autonomous.py  test_blackboard.py  test_blackboard_game.py  test_clients.py  test_config.py  test_create_game.py  test_debug.py  test_demo.py  test_example_roles.py  test_game.py  test_game_executor.py  test_game_service.py  test_game_types.py  test_integration.py  test_integration_adapters.py  test_integration_candidate_verification.py  test_integration_export.py  test_integration_models.py  test_integration_play_game.py  test_integration_run.py  test_integration_runtime.py  test_integration_summarizer.py  test_integrator.py  test_language_plugin.py  test_language_rust.py  test_language_zig.py  test_lifecycle.py  test_loop.py  test_model_output.py  (+37 more)
(+119 files in other folders)
