[project]
name = "bounded-adversarial-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Atle", email = "atle.andreas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
baps-demo = "baps.demo:main"
baps-adversarial-demo = "baps.adversarial_demo:main"
baps-ollama-adversarial-demo = "baps.ollama_adversarial_demo:main"
baps-play-game = "baps.play_game:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "baps"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
