[project]
name = "bounded-adversarial-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Atle", email = "atle.andreas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
baps-run = "baps.core.run:main"
baps-schedule = "baps.scheduler.scheduler:main"
baps-apply-northstar = "baps.northstar.northstar_apply:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "baps"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
timeout = 3

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
